[package]
name = "slack-hook"
version = "0.9.0-dev"
description = "A rust crate for sending messages to Slack via webhooks."
authors = ["Christopher Brickley <brickley@gmail.com>"]
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frostly/rust-slack"
edition = "2018"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
# Used to access some functionality that isn't directly rexposed by `reqwest`
url = { version = "2.5.4", features = ["serde"] }
