[package]
name = "slack-hook"
version = "0.9.0"
description = "A rust crate for sending messages to Slack via webhooks."
authors = ["Christopher Brickley <brickley@gmail.com>"]
keywords = ["slack", "webhook", "hook", "messaging"]
categories = ["api-bindings", "web-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frostly/rust-slack"
edition = "2018"
rust-version = "1.67.1"

[features]
default = ["default-tls"]

# Enables use of the synchronous "blocking" HTTP client
blocking = ["reqwest/blocking"]
# Provides TLS support to connect over HTTPS
default-tls = ["reqwest/default-tls"]
# Enables TLS functionality provided by `native-tls`
native-tls = ["reqwest/native-tls"]
# Enables TLS functionality provided by `rustls`
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
# Used to access some functionality that isn't directly rexposed by `reqwest`
url = { version = "2.5.4", features = ["serde"] }

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
]

[dev-dependencies]
insta = { version = "1.42.0", features = ["json"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
